// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-eCImvq bfKXvY"
  >
    <div
      className="sc-dkPtyc sc-jRQAMF dMRiBE ja-DAfl"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-eCImvq bfKXvY"
  >
    <div
      className="sc-dkPtyc sc-jRQAMF dMRiBE ja-DAfl"
    />
  </nav>
</header>
`;
